--- a/terraform-init/action.yaml
+++ b/terraform-init/action.yaml
@@ -43,7 +43,7 @@ runs:
         echo "key = \"$KEY\"" >> backend.tfvars
         echo "resource_group_name = \"$RESOURCE_GROUP_NAME\"" >> backend.tfvars
       shell: bash
-    - name: Terraform init
+    - name: Terraform init -input=false
       working-directory: ${{ inputs.working-directory }}
       run: terraform init -backend-config=backend.tfvars
       shell: bash
