feat: [DEVOPS-42] cat backend.tfvars

--- a/terraform-init/action.yaml
+++ b/terraform-init/action.yaml
@@ -43,6 +43,10 @@ runs:
         echo "key = \"$KEY\"" >> backend.tfvars
         echo "resource_group_name = \"$RESOURCE_GROUP_NAME\"" >> backend.tfvars
       shell: bash
+    - name: Cat backend.tfvars
+      working-directory: ${{ inputs.working-directory }}
+      run: cat backend.tfvars
+      shell: bash
     - name: Terraform init 
       working-directory: ${{ inputs.working-directory }}
       run: terraform init -backend-config=backend.tfvars -input=false
