--- a/terraform-init/action.yaml
+++ b/terraform-init/action.yaml
@@ -39,13 +39,9 @@ runs:
         RESOURCE_GROUP_NAME: ${{ inputs.resource-group-name }}
       run: |
         echo "storage_account_name = \"$STORAGE_ACCOUNT_NAME\"" > backend.tfvars
-        echo "container_name = \"$CONTAINER_NAME\"" > backend.tfvars
+        echo "container_name = \"$CONTAINER_NAME\"" >> backend.tfvars
         echo "key = \"$KEY\"" >> backend.tfvars
         echo "resource_group_name = \"$RESOURCE_GROUP_NAME\"" >> backend.tfvars
-      shell: bash
-    - name: Cat backend.tfvars
-      working-directory: ${{ inputs.working-directory }}
-      run: cat backend.tfvars
       shell: bash
     - name: Terraform init 
       working-directory: ${{ inputs.working-directory }}
