refactor(validate-pr-name): :fire: update validate-pr-name github action
Replace "\n" by normal newline.

--- a/validate-pr-name/action.yaml
+++ b/validate-pr-name/action.yaml
@@ -51,7 +51,10 @@ runs:
         else
           echo "❌ PR name does not match the required pattern: $REGEX"
 
-          COMMENT="❌ **PR name validation failed**\n\nExpected pattern: \`$REGEX\`\nProvided name: \`$PR_NAME\`"
+          COMMENT="❌ **PR name validation failed**
+          
+          Expected pattern: \`$REGEX\`
+          Provided name: \`$PR_NAME\`"
 
           curl -s -X POST "https://api.github.com/repos/$REPO/issues/$ISSUE_NUMBER/comments" \
             -H "Authorization: Bearer $GITHUB_TOKEN" \
