--- a/validate-pr-name/action.yaml
+++ b/validate-pr-name/action.yaml
@@ -24,7 +24,7 @@ runs:
         echo "PR name: '$PR_NAME'"
         echo "Scopes: '$SCOPES'"
 
-        TYPES="feat|fix|docs|style|refactor|perf|test|build|ci|chore|revert"
+        TYPES="feat|fix|docs|style|refactor|perf|test|build|ci|chore|revert|release|hotfix"
 
         if [ -z "$SCOPES" ]; then
           # No scopes provided: allow no scope or validated scope
