feat(get-branches-to-rebase): :sparkles: correct get-branches-to-rebase action

--- a/get-branches-to-rebase/action.yaml
+++ b/get-branches-to-rebase/action.yaml
@@ -6,7 +6,7 @@ runs:
   steps:
 
     - name: List branches to rebase
-      id: branches
+      id: branches-list
       env:
         REF_NAME: ${{ github.ref_name }}
       shell: bash
