fix(list-tickets-from-commit-to-pr): 🐛 handle missing Link header gracefully
Added "|| true" to grep command for Link header extraction to prevent script
failure when no Link header is present (single page response). This fixes
exit code 1 error when all commits fit on the first page.

--- a/list-tickets-from-commit-to-pr/action.yaml
+++ b/list-tickets-from-commit-to-pr/action.yaml
@@ -75,7 +75,7 @@ runs:
           fi
           
           # Extract the next URL from Link header
-          link_header=$(echo "$headers" | grep -i "^link:" | sed 's/^link: //i')
+          link_header=$(echo "$headers" | grep -i "^link:" | sed 's/^link: //i' || true)
           next_url=""
           
           if [ -n "$link_header" ]; then
